--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <html lang="en"> 
     <head> 
         <meta charset="utf-8">
+      <link href="_styles.css" rel="stylesheet" type="text/css">
         <title>Hello World</title>
     </head> 
     <body>
