--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head> 
         <meta charset="utf-8">
       <link href="_styles.css" rel="stylesheet" type="text/css">
-        <title>Hello World</title>
+        <title>WebTech Splash</title>
     </head> 
     <body>
-    <h1> Hello World </h1>
+    <h1> WebTech Splash </h1>
     </body>
 </html>
