--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <html lang="en"> 
     <head> 
         <meta charset="utf-8">
-      <link href="_styles.css" rel="stylesheet" type="text/css">
+      <link href="styles.css" rel="stylesheet" type="text/css">
         <title>WebTech Splash</title>
     </head> 
     <body>
