--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head> 
         <meta charset="utf-8">
       <title>WebTech Splash</title>
-       <link href="_css/styles.css" rel="stylesheet" type="text/css">
+       <link href="_css/style.css" rel="stylesheet" type="text/css">
     </head> 
     <body>
     <h1> WebTech Splash </h1>
