--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <head> 
         <meta charset="utf-8">
       <title>WebTech Splash</title>
-       <link href="_css/style.css" rel="stylesheet" type="text/css">
+       <style type="text/css">
+         background: blue; 
+      </style>
     </head> 
     <body>
     <h1> WebTech Splash </h1>
