--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
       <title>WebTech Splash</title>
        <style type="text/css">
-         background: blue; 
+         {background: blue; }
       </style>
     </head> 
     <body>
