--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="utf-8">
       <title>WebTech Splash</title>
        <style type="text/css">
-         h1 {font-size: 2em;}
+         h1 {font-size: 2em;
+           font-color: blue; }
       </style>
     </head> 
     <body>
