--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
       <title>WebTech Splash</title>
        <style type="text/css">
-         h1 {font-size: 2em;
-           font-color: blue; }
+         h1 {font-size: 18pt;
+           color: blue; }
       </style>
     </head> 
     <body>
