--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
        <style type="text/css">
          h1 {font-size: 18pt;
            color: blue; }
+         h2 {font-size: 16pt;
+           color: green;
+         }
       </style>
     </head> 
     <body>
