--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
       <title>WebTech Splash</title>
        <style type="text/css">
-         background {color: black;}
+         html { background-color: black;}
          h1 {font-size: 18pt;
            color: blue; }
          h2 {font-size: 16pt;
