--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
       <title>WebTech Splash</title>
        <style type="text/css">
          html { background-color: black;}
-         h1 {font-size: 18pt;
+         h1 {font-size: 28pt;
            color: blue; }
-         h2 {font-size: 16pt;
+         h2 {font-size: 24pt;
            color: green;
          }
+         h3 {font-size: 20pt;
+         color: red;}
+         p {font-size: 16pt;
+         color: yellow;}
       </style>
     </head> 
     <body>
