--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
            Designers
            Developers(FE,BE,FS)
       </p>
-      <h3> Coding Languages </h3> <h3> Coding Languages </h3>
+      <h3> Coding Languages </h3>
       <p>  Overview
            HTML
            CSS
