--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <html lang="en"> 
     <head> 
         <meta charset="utf-8">
-      <title>WebTech Splash</title>
+      <title>WebTech Splash!</title>
        <style type="text/css">
          html { background-color: black;}
          h1 {font-size: 28pt;
