--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <html lang="en"> 
     <head> 
         <meta charset="utf-8">
-      <title>WebTech Splash!</title>
+      <title>WebTech Splash</title>
        <style type="text/css">
          html { background-color: black;}
          h1 {font-size: 28pt;
@@ -17,7 +17,7 @@
       </style>
     </head> 
     <body>
-    <h1> WebTech Splash </h1>
+    <h1> WebTech Splash! </h1>
       
       <h2> Dive into the world of Web Technology</h2>
      
