--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
       <h2> Dive into the world of Web Technology</h2>
      
       <h3> Home </h3>
-      <p> Introduction/Welcome
-          MiniOverview of Web Technologies
-          MiniOverview Coding Languages
-          MiniOverview Software
-          MiniOverview Marketing
-    </p>
+      <ul>
+        <li>Introduction/Welcome</li>
+        <li> MiniOverview of Web Technologies</li>
+        <li> MiniOverview Coding Languages</li>
+        <li>  MiniOverview Software</li>
+        <li> MiniOverview Marketing</li>
+    </ul>
       <h3> Web Technologies</h3>
       <p>  Overview
            Careers
