--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
          }
          h3 {font-size: 20pt;
          color: red;}
-         p {font-size: 16pt;
+         ul {font-size: 16pt;
          color: yellow;}
       </style>
     </head> 
