--- a/index.html
+++ b/index.html
@@ -29,12 +29,19 @@
         <li>  MiniOverview Software</li>
         <li> MiniOverview Marketing</li>
     </ul>
-      <h3> Web Technologies</h3>
-      <p>  Overview
-           Careers
-           Designers
-           Developers(FE,BE,FS)
-      </p>
+      <h1> Web Technologies</h1>
+         <ul>  
+           <li>Overview</li>
+           <li> Careers</li>
+           <li> Designers</li>
+           <li>Developers
+             <ul>
+               <li>Front End</li>
+               <li>Back End</li>
+               <li>Full Stack</li>
+             </ul>
+           </li>
+            </ul>
       <h3> Coding Languages </h3>
       <p>  Overview
            HTML
