--- a/index.html
+++ b/index.html
@@ -33,7 +33,13 @@
          <ul>  
            <li>Overview</li>
            <li> Careers</li>
-           <li> Designers</li>
+           <li> Designers
+           <ul>
+             <li>Web</li>
+             <li>Graphics</li>
+             <li>UI/UX</li>
+             </ul>
+           </li>
            <li>Developers
              <ul>
                <li>Front End</li>
