--- a/index.html
+++ b/index.html
@@ -74,10 +74,11 @@
         <li> Semantic Versioning</li>
       </ul>
       <h3> Marketing </h3>
-      <ul>E-commerce(Overview)
-         SEO: traffic, UI/UX,  graphics/styles, site usabilty, domain names, brand/image, description keywords and titles, site success
-         Social Media: Facebook, Instagram, Twitter, LinkedIn, Youtube, etc
-         Google(Tools and Services): Analytics, Adwords, Domains, Adsense
+      <ul>
+        <li>E-commerce(Overview)</li>
+        <li>SEO(Overview)</li>
+        <li>Social Media</li> 
+        <li> Google(Tools and Services)</li>
      </ul>
       
       
