--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <h3> Home </h3>
       <ul>
         <li>Introduction/Welcome</li>
-        <li> MiniOverview of Web Technologies</li>
+        <li> MiniOverview Web Technologies</li>
         <li> MiniOverview Coding Languages</li>
         <li>  MiniOverview Software</li>
         <li> MiniOverview Marketing</li>
