--- a/WebTechSplash/index.html
+++ b/WebTechSplash/index.html
@@ -42,7 +42,7 @@
                     <span class="sr-only">Toggle navigation</span>
                     Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="index.html">WebTechSplash.com</a>
+                <a class="navbar-brand" href="index.html">Start Bootstrap</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -52,18 +52,14 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="about.html">Web Technology</a>
+                        <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="post.html">Coding </a>
+                        <a href="post.html">Sample Post</a>
                     </li>
                     <li>
-                        <a href="contact.html">Software</a>
+                        <a href="contact.html">Contact</a>
                     </li>
-                <li>
-                        <a href="last.html">Marketing</a>
-                    </li>
-                
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -73,14 +69,14 @@
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('img/waterfall3.jpg')">
+    <header class="intro-header" style="background-image: url('img/home-bg.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
-                    <h1>WebTech Splash!</h1>
+                        <h1>Clean Blog</h1>
                         <hr class="small">
-                        <span class="subheading">Dive into the world of Web Technology</span>
+                        <span class="subheading">A Clean Blog Theme by Start Bootstrap</span>
                     </div>
                 </div>
             </div>
