--- a/WebTechSplash/index.html
+++ b/WebTechSplash/index.html
@@ -77,7 +77,7 @@
                     <div class="site-heading">
                         <h1>WebTech Splash!</h1>
                         <hr class="small">
-                        <span class="subheading">Dive in the world of Web Technology</span>
+                        <span class="subheading">Dive into the world of Web Technology</span>
                     </div>
                 </div>
             </div>
