--- a/Coding.html
+++ b/Coding.html
@@ -150,9 +150,9 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum molestiae debitis nobis, quod sapiente qui voluptatum, placeat magni repudiandae accusantium fugit quas labore non rerum possimus, corrupti enim modi! Et.</p>
+                <h2>What is code?</h2> 
+                <p>Code is a system of words, letters, figures, or other symbols substituted for other words, letters, etc. In the case of Web Development we use different languages to program instructions, adjust the web content we share to our liking and add functionality for our users. Although this process may seem complex, the work is broken down into different sections. Depending on what part of your project you're focused on, you can figure out which language to use and manipulate web content accordingly. </p>
+                <p>There are different languages used for specific tasks in the development procress. Front end developers work with languages that render in the browser, also called a client. <a href="HTML.html">HTML</a>, <a href="CSS.html">CSS  </a>, and <a href="Javascript.html">Javascrpt</a> are common front end languages used. Back end development customizes content for each user depending on data and might require a special server. Servers manage data and how it's presented to the user. A popular combination of back end languages is <a href="PHP.html">PHP</a> and <a href="SQL.html">SQL</a>.</p>
             </div>
         </div>
     </div>
