--- a/WebTechnology.html
+++ b/WebTechnology.html
@@ -150,9 +150,10 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum molestiae debitis nobis, quod sapiente qui voluptatum, placeat magni repudiandae accusantium fugit quas labore non rerum possimus, corrupti enim modi! Et.</p>
+                <h2>What is Web Technology?</h2>
+                <p>Well, I've been talking about web technology a lot, but what is it? For starters the internet is a massive network, and the web is a way of transmitting data over the internet using HTTP. HTTP is an acronym for HyperText Transfer Protocol, and is the standard protocol used. Protocols are simple languages that let computers share data.  </p>
+                <p>The data is shared among a huge number of clients and servers that make up the internet. Clients are the devices that request and render web content. Servers are applications that deliver that web content. Web content can be  text, graphics, audio, visuals, games, tools, and/or many other applications that you wish to share.</p>
+                <p>Common web stacks include a web server, database server, and programming language. A web stack is a collection of software required for Web Development. Front end is the visual that users interact with and may contain programming languages such as html, css, javascript, and bootstrap. Back end is the process that happens on the server, common programming languages include PHP and SQL.</p>
             </div>
         </div>
     </div>
