--- a/imgWeek14.html
+++ b/imgWeek14.html
@@ -1,10 +1,4 @@
 
  <a href="index.html">Home</a>
-<h2>Week 14 Image Opimization</h2>
+<h2><a href="w3schools.com">W3 Schools</a></h2>
 
-<p>Effect, Optimized, Resized Small</p>
-<img src="img/waterfall4.jpg">
-<p>Effect, Optimized, Resized Large</p>
-<img src="img/waterfall3.jpg">
-<p>Original</p>
-<img src="img/waterfall1.jpg">
