--- a/imgWeek14.html
+++ b/imgWeek14.html
@@ -1,4 +1,4 @@
 
  <a href="index.html">Home</a>
-<h2><a href="w3schools.com">W3 Schools</a></h2>
+<h2><a href="http://www.w3schools.com/cert/default.asp">W3 Schools</a></h2>
 
