Signed-off-by: dgonz559 <dgonzOTB@gmail.com>

--- a/WebTechnology.html
+++ b/WebTechnology.html
@@ -103,8 +103,9 @@
        
      <li>
 <a href="Software.html">Overview</a>
- <a href="Brackets.html">Brackets</a> 
-  <a href="Git.html">Git</a>      </li>
+<a href="Git.html">Git</a> 
+         <a href="Brackets.html">Brackets</a> 
+       </li>
    
     </ul>
   </div>
