--- a/GitBash.html
+++ b/GitBash.html
@@ -1,3 +1,6 @@
 <p><a href="index.html">Home
                         
                         </a></p>
+<p><a href="Git.html">Git
+                        
+                        </a></p>
