--- a/Marketing.html
+++ b/Marketing.html
@@ -150,9 +150,12 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum molestiae debitis nobis, quod sapiente qui voluptatum, placeat magni repudiandae accusantium fugit quas labore non rerum possimus, corrupti enim modi! Et.</p>
+                <h2>Where are your customers and users?</h2>
+                <p>Well, with the new mobile technology available more people are likely to be browsing the internet. Although, finding users might not be problem these days, them finding you and keeping them coming back could be. </p>
+                
+                <p>Search Engine Optimization or SEO for short is a way to get quicker results in a search engine based on the keywords from your site and the site's functionality. This is a good way for new or returning customers and users to find you easily when searching on the web.  </p>
+                <p> Social Media is a way to advertise, gain followers, connect with people, and share any information quickly to your regular users. This could could be reguarding updates to your site, upcoming events, new videos or anything you'd like to share with users instantly.  </p>
+                <p>Once you've got users and developed some heavy traffic on your site, there are many tools you can use to analyze your traffic data. This is important because you'll understand your users and how or why they use your site. Using this information you can modify your site to the needs of your users to make them feel comfortable and more likely to return to your site. </p>
             </div>
         </div>
     </div>
