Signed-off-by: dgonz559 <dgonzOTB@gmail.com>

--- a/WebTechnology.html
+++ b/WebTechnology.html
@@ -154,7 +154,7 @@
                 <h2>What is Web Technology?</h2>
                 <p>Well, I've been talking about web technology a lot, but what is it? For starters the internet is a massive network, and the web is a way of transmitting data over the internet using HTTP. HTTP is an acronym for HyperText Transfer Protocol, and is the standard protocol used. Protocols are simple languages that let computers share data.  </p>
                 <p>The data is shared among a huge number of clients and servers that make up the internet. Clients are the devices that request and render web content. Servers are applications that deliver that web content. Web content can be  text, graphics, audio, visuals, games, tools, and/or many other applications that you wish to share.</p>
-                <p>Common web stacks include a web server, database server, and programming language. A web stack is a collection of software required for Web Development. Front end is the visual that users interact with and may contain programming languages such as html, css, javascript, and bootstrap. Back end is the process that happens on the server, common programming languages include PHP and SQL.</p>
+                <p>Common web stacks include a web server, database server, and programming language. A web stack is a collection of software required for Web Development. Front end is the visual that users interact with and may contain programming languages such as HTML, CSS, Javascript, and Bootstrap. Back end is the process that happens on the server, common programming languages include PHP and SQL.</p>
             </div>
         </div>
     </div>
