--- a/GitBash.html
+++ b/GitBash.html
@@ -159,7 +159,7 @@
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <h2>Gitbash  </h2> 
             
-               <p><a href="https://services.github.com/on-demand/downloads/github-git-cheat-sheet.pdf">CheatSheets</a></p>
+               <p><a href="https://services.github.com/on-demand/downloads/github-git-cheat-sheet.pdf">CheatSheet</a></p>
                    
                 </div>
                 <hr>
