Signed-off-by: dgonz559 <dgonzOTB@gmail.com>

--- a/CSS.html
+++ b/CSS.html
@@ -159,8 +159,9 @@
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <h2>CSS  </h2> 
             
-               <p>Cascading Style Sheets</p>
+               <p>While HTML gives the page some structure, CSS gives your page some style. This will give your design flexibility and allow your webpage to be customized however you please. CSS saves a lot of time, it can control the layout of multiple pages all at once. Being creative and understanding all the possibilities CSS provides will take some time, but your end result will be amazing looking webpages. </p>
                    
+                <p> <a href="http://www.w3schools.com/cssref/default.asp">CSS Reference</a>    </p>
                 </div>
                 <hr>
                 <!-- Pager -->
