--- a/HTML.html
+++ b/HTML.html
@@ -157,6 +157,7 @@
          </div> 
             
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                <h1>  <a href="FrontEndCoding.html">Front End Languages</a>   </h1>
                 <h2>HTML  </h2> 
             
                <p>HyperText Markup Language or HTML for short gives Web pages structure using markup language. Markup languages are designed for the processing, definition and presentation of text. HTML tags represent elements on a page like headers, footers, body, paragraphs and others. Browswers don't display tags, they use them to render the content of the page.</p>
