Signed-off-by: dgonz559 <dgonzOTB@gmail.com>

--- a/Github.html
+++ b/Github.html
@@ -159,7 +159,7 @@
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <h2> <a href="https://github.com/">GitHub</a>   </h2> 
             
-               <p>The largest open source community in the world. Online project hosting using Git enables you to preview and test websites. Also, there are many open source projects available for contribution or you can build from other's ideas.</p>
+               <p>The largest open source community in the world. Online project hosting using Git enables you to preview and test websites. Also, there are many open source projects available for contribution or you can build from other's ideas as well.</p>
                    
                 </div>
                 <hr>
