Signed-off-by: dgonz559 <dgonzOTB@gmail.com>

--- a/Bootstrap.html
+++ b/Bootstrap.html
@@ -205,7 +205,7 @@
                             </a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted">Copyright &copy; Your Website 2016</p>
+                    <p class="copyright text-muted">Copyright &copy; WebTech Splash 2016</p>
                 </div>
             </div>
         </div>
