--- a/FullStack.html
+++ b/FullStack.html
@@ -163,7 +163,7 @@
             
              <h4>Common Job Titles</h4>
                 <ul><li>Full-Stack Developer</li>
-                    <li>Full Stack Designer</li>
+                    <li>Full-Stack Designer</li>
                     <li>Full-Stack Engineer</li>
                     <li>Software Engineer</li>
                     <li>Lead Developer</li>
