--- a/BackEndCoding.html
+++ b/BackEndCoding.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     
 
-    <title>BackEndLanguages</title>
+    <title>Back End Languages</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -206,7 +206,7 @@
                             </a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted">Copyright &copy; Your Website 2016</p>
+                    <p class="copyright text-muted">Copyright &copy; WebTech Splash 2016</p>
                 </div>
             </div>
         </div>
