--- a/AnalyticsTools.html
+++ b/AnalyticsTools.html
@@ -159,7 +159,7 @@
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <h2>Analytics Tools  </h2> 
             
-               <p>Analyze for Improvement</p>
+               <p>Once you've got users and developed some heavy traffic on your site, there are many tools you can use to analyze your traffic data. This is important because you'll understand your users and how or why they use your site. Using this information you can modify your site to the needs of your users to make them feel comfortable and more likely to return to your site. </p>
                    
                 </div>
                 <hr>
