--- a/SocialMedia.html
+++ b/SocialMedia.html
@@ -159,7 +159,7 @@
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <h2>Social Media  </h2> 
             
-               <p>Connect with your audience</p>
+                <p> Social Media is a way to advertise, gain followers, connect with people, and share any information quickly to your regular users. This could be reguarding updates to your site, upcoming events, new videos or anything you'd like to share with users instantly.  </p>
                    
                 </div>
                 <hr>
